--- a/React/react-playground/package.json
+++ b/React/react-playground/package.json
@@ -15,8 +15,10 @@
     "@monaco-editor/react": "^4.7.0",
     "@types/babel__core": "^7.20.5",
     "@types/babel__standalone": "^7.1.9",
+    "@types/lodash-es": "^4.17.12",
     "@typescript/ata": "^0.9.8",
     "allotment": "^1.20.5",
+    "lodash-es": "^4.17.23",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
